--- a/friends.html
+++ b/friends.html
@@ -40,11 +40,9 @@
         <span class="header__icon">
           <i class="fas fa-search"></i>
         </span>
-        <a href="#find">
           <span class="header__icon icon--user-plus">
               <i class="fas fa-user-plus"></i>
           </span>
-        </a>
         <span class="header__icon">
           <i class="fas fa-music"></i>
         </span>
@@ -63,7 +61,7 @@
         <div class="friends__friend friend">
           <div class="friend__column">
             <img
-              src="src/img/페퍼보이2.JPG"
+              src="src/img/ppby2.JPG"
               alt=""
               class="globar-avatar friend__avatar"
             />
@@ -161,7 +159,7 @@
         <li class="friends__friend friend">
           <div class="friend__column">
             <img
-              src="src/img/페퍼보이.jpeg"
+              src="src/img/ppby.jpeg"
               alt=""
               class="friend__avatar"
             />
@@ -184,7 +182,7 @@
         <li class="friends__friend friend">
           <div class="friend__column">
             <img
-              src="src/img/페퍼보이.jpeg"
+              src="src/img/ppby.jpeg"
               alt=""
               class="friend__avatar"
             />
@@ -207,7 +205,7 @@
         <li class="friends__friend friend">
           <div class="friend__column">
             <img
-              src="src/img/페퍼보이.jpeg"
+              src="src/img/ppby.jpeg"
               alt=""
               class="friend__avatar"
             />
@@ -230,7 +228,7 @@
         <li class="friends__friend friend">
           <div class="friend__column">
             <img
-              src="src/img/페퍼보이.jpeg"
+              src="src/img/ppby.jpeg"
               alt=""
               class="friend__avatar"
             />
