--- a/more.html
+++ b/more.html
@@ -63,7 +63,7 @@
         <div class="more__friend friend">
           <div class="friend__column">
             <img
-              src="src/img/페퍼보이2.JPG"
+              src="src/img/ppby2.JPG"
               alt=""
               class="globar-avatar friend__avatar"
             />
